fix alignment problem on home page, fixes #654

--- a/themes/sbvfrd/less/sbvfrd.less
+++ b/themes/sbvfrd/less/sbvfrd.less
@@ -1037,14 +1037,14 @@ div.memorize {
 }
 
 
-/* home content */
 .home-content-box, .search-home-facets {
   background-color: @content-box-background-color;
   border: 1px solid @content-box-border-color;
   min-height: 320px;
   max-width: 95%;
   margin-top: 30px;
-  margin-left: -15px;
+  margin-left: auto;
+  margin-right: auto;
   border-radius: 2px;
   padding: 20px 20px 0 20px;
 
